--- a/index.html
+++ b/index.html
@@ -1908,10 +1908,10 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
     <div class="contact-info" data-aos="fade-up" data-aos-delay="250">
       <p data-aos="fade-up" data-aos-delay="300">
-        <strong>Adresse:</strong> Lößniger Str. 15, 04275 Leipzig
+        <strong>Adresse:</strong> Friedrich-Ebert-Straße 82, 04109 Leipzig
       </p>
       <p data-aos="fade-up" data-aos-delay="350">
-        <strong>Telefon:</strong> 0151 70128870
+        <strong>Telefon:</strong> 015170128870
       </p>
       <p data-aos="fade-up" data-aos-delay="400">
         <strong>E-Mail:</strong> onlybeautyleipzig@gmail.com
@@ -1925,135 +1925,101 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
 
 <footer style="background:#1a1a1a; padding:2rem; text-align:center; color: rgba(255,255,255,0.7);">
-  
-  <!-- Copyright -->
   <p>© 2026 <span style="color:#d4b47a;">Only Beauty – Derma Institut & Elite Academy<br>
     Ganzheitliche Hautgesundheit • Ursache statt Oberfläche</span></p>
   
-  <!-- Footer links -->
   <div style="margin-top:1rem;">
     <span class="footer-text-btn" data-modal="privacy-modal">Datenschutzerklärung</span> | 
-    <span class="footer-text-btn" data-modal="agb-modal">AGB</span>
+    <span class="footer-text-btn" data-modal="agb-modal">AGB</span> | 
+    <span class="footer-text-btn" data-modal="impressum-modal">Impressum</span>
   </div>
 </footer>
 
-<!-- Datenschutzerklärung Modal -->
+
 <div id="privacy-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">&times;</span>
     <h2>Datenschutzerklärung</h2>
     <div class="modal-text" style="overflow-y:auto; max-height:70vh; line-height:1.6;">
-      <p>1. Einleitung<br>
+      <p><strong>1. Einleitung</strong><br>
       Der Schutz Ihrer persönlichen Daten ist uns ein besonderes Anliegen. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p>
 
-      <p>2. Verantwortlicher<br>
+      <p><strong>2. Verantwortlicher</strong><br>
       Larissa Nitz<br>
-      Lößniger Str. 15, 04275 Leipzig<br>
+      Friedrich-Ebert-Straße 82<br>
+      04109 Leipzig<br>
       Email: onlybeautyleipzig@gmail.com<br>
       Telefon: 015170128870</p>
 
-      <p>3. Erhebung und Speicherung personenbezogener Daten sowie Art und Zweck der Verwendung</p>
-      <p>3.1. Beim Besuch der Website<br>
-      Beim Aufrufen unserer Website werden automatisch Informationen erfasst, die Ihr Browser an unseren Server übermittelt. Dazu gehören:</p>
-      <ul>
-        <li>IP-Adresse</li>
-        <li>Datum und Uhrzeit der Anfrage</li>
-        <li>Zeitzonendifferenz zur Greenwich Mean Time (GMT)</li>
-        <li>Inhalt der Anforderung (konkrete Seite)</li>
-        <li>Zugriffsstatus/HTTP-Statuscode</li>
-        <li>Jeweils übertragene Datenmenge</li>
-        <li>Website, von der die Anforderung kommt</li>
-        <li>Browsertyp und -version sowie Sprache und Version der Browsersoftware</li>
-      </ul>
-      <p>Diese Daten werden benötigt, um einen reibungslosen Verbindungsaufbau der Website zu gewährleisten und die Systemsicherheit zu gewährleisten.</p>
+      <p><strong>3. Erhebung und Speicherung personenbezogener Daten</strong></p>
+      <p>3.1. Beim Besuch der Website: Automatische Erfassung von IP-Adresse, Datum/Uhrzeit und Browsertyp zur Sicherstellung der Systemsicherheit.</p>
+      <p>3.2. Kontaktaufnahme: Bei Anfragen per E-Mail oder Telefon speichern wir Ihre Angaben zur Bearbeitung der Anfrage (Art. 6 Abs. 1 lit. b DSGVO).</p>
 
-      <p>3.2. Kontaktformular<br>
-      Wenn Sie uns über ein Kontaktformular oder per E-Mail Anfragen zukommen lassen, werden Ihre Angaben inklusive der von Ihnen angegebenen Kontaktdaten zwecks Bearbeitung der Anfrage gespeichert.<br>
-      Rechtsgrundlage: Art. 6 Abs. 1 lit. b DSGVO</p>
+      <p><strong>4. Ihre Rechte</strong><br>
+      Sie haben das Recht auf Auskunft, Berichtigung, Löschung und Einschränkung der Verarbeitung Ihrer personenbezogenen Daten sowie das Recht auf Datenübertragbarkeit und Widerruf erteilter Einwilligungen.</p>
 
-      <p>4. Cookies<br>
-      Unsere Website verwendet Cookies. Dabei handelt es sich um kleine Textdateien, die auf Ihrem Endgerät gespeichert werden. Cookies richten keinen Schaden an und enthalten keine Viren.</p>
-      <ul>
-        <li>Notwendige Cookies: Diese sind für den Betrieb der Website erforderlich.</li>
-        <li>Statistik-Cookies: Mit Ihrer Zustimmung nutzen wir Cookies, um das Nutzerverhalten anonymisiert auszuwerten.</li>
-      </ul>
-      <p>Sie können Ihre Cookie-Einstellungen jederzeit in Ihrem Browser ändern.</p>
-
-      <p>5. Analyse-Tools und Tools von Drittanbietern</p>
-      <p>5.1. Google Analytics<br>
-      Diese Website nutzt den Webanalysedienst Google Analytics. Anbieter ist die Google LLC, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.<br>
-      Google Analytics verwendet Cookies, die eine Analyse Ihrer Benutzung der Website ermöglichen. Die durch Cookies erzeugten Informationen werden an einen Server von Google in den USA übertragen und dort gespeichert.<br>
-      Rechtsgrundlage: Ihre Einwilligung gemäß Art. 6 Abs. 1 lit. a DSGVO</p>
-
-      <p>5.2. Google Maps<br>
-      Zur Darstellung von Karteninhalten verwenden wir Google Maps. Anbieter ist die Google LLC, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA.<br>
-      Die Nutzung von Google Maps erfolgt im Interesse einer ansprechenden Darstellung unseres Online-Angebots.<br>
-      Rechtsgrundlage: Art. 6 Abs. 1 lit. f DSGVO</p>
-
-      <p>6. Weitergabe von Daten an Dritte<br>
-      Eine Weitergabe Ihrer persönlichen Daten an Dritte erfolgt nur, wenn:</p>
-      <ul>
-        <li>Sie Ihre ausdrückliche Einwilligung dazu erteilt haben,</li>
-        <li>die Verarbeitung zur Erfüllung eines Vertrags erforderlich ist,</li>
-        <li>eine rechtliche Verpflichtung besteht, oder</li>
-        <li>die Weitergabe zur Wahrung berechtigter Interessen erforderlich ist.</li>
-      </ul>
-
-      <p>7. Ihre Rechte<br>
-      Sie haben das Recht:</p>
-      <ul>
-        <li>Auskunft über Ihre gespeicherten Daten zu erhalten (Art. 15 DSGVO),</li>
-        <li>unrichtige Daten berichtigen zu lassen (Art. 16 DSGVO),</li>
-        <li>die Löschung Ihrer Daten zu verlangen (Art. 17 DSGVO),</li>
-        <li>die Einschränkung der Verarbeitung zu verlangen (Art. 18 DSGVO),</li>
-        <li>Ihre Einwilligung zur Datenverarbeitung zu widerrufen (Art. 7 Abs. 3 DSGVO),</li>
-        <li>eine Beschwerde bei einer Aufsichtsbehörde einzureichen (Art. 77 DSGVO).</li>
-      </ul>
-
-      <p>8. Dauer der Datenspeicherung<br>
-      Wir speichern Ihre personenbezogenen Daten nur so lange, wie dies zur Erreichung der hier genannten Zwecke erforderlich ist oder wie es gesetzlich vorgeschrieben ist.</p>
-
-      <p>9. Datensicherheit<br>
-      Wir setzen technische und organisatorische Maßnahmen ein, um Ihre Daten gegen Manipulation, Verlust, Zerstörung oder unberechtigte Zugriffe zu schützen.</p>
-
-      <p>10. Änderungen dieser Datenschutzerklärung<br>
-      Wir behalten uns vor, diese Datenschutzerklärung bei Bedarf anzupassen, um den aktuellen rechtlichen Anforderungen zu entsprechen oder Änderungen unserer Dienstleistungen umzusetzen.</p>
+      <p><strong>5. Datensicherheit</strong><br>
+      Wir setzen moderne Verschlüsselungsverfahren ein, um Ihre Daten vor unbefugtem Zugriff zu schützen.</p>
     </div>
   </div>
 </div>
 
-<!-- AGB Modal -->
 <div id="agb-modal" class="modal">
   <div class="modal-content">
     <span class="close-btn">&times;</span>
     <h2>Allgemeine Geschäftsbedingungen (AGB)</h2>
     <div class="modal-text" style="overflow-y:auto; max-height:70vh; line-height:1.6;">
-      <p>1. Geltungsbereich<br>
-      Diese Allgemeinen Geschäftsbedingungen gelten für alle Dienstleistungen, die im Kosmetik Salon ONLY BEAUTY by Larissa angeboten werden. Mit der Inanspruchnahme unserer Dienstleistungen erkennt der Kunde diese AGB an.</p>
+      <p><strong>1. Geltungsbereich</strong><br>
+      Diese AGB gelten für alle Dienstleistungen von Only Beauty – Derma Institut & Elite Academy.</p>
 
-      <p>2. Terminvereinbarung<br>
-      Termine sind verbindlich und müssen im Voraus vereinbart werden. Änderungen oder Stornierungen sind bis 24 Stunden vor dem Termin kostenfrei möglich. Bei späteren Stornierungen oder Nichterscheinen behalten wir uns vor, die vollen Kosten des Termins in Rechnung zu stellen.</p>
+      <p><strong>2. Terminvereinbarung & Stornierung</strong><br>
+      Termine sind verbindlich. Absagen müssen mindestens 24 Stunden im Voraus erfolgen. Bei verspäteter Absage oder Nichterscheinen behalten wir uns vor, eine Ausfallgebühr in Höhe von 100% des Behandlungspreises zu berechnen.</p>
 
-      <p>3. Preise<br>
-      Alle Preise sind in Euro angegeben und verstehen sich inklusive der gesetzlichen Mehrwertsteuer. Änderungen der Preise bleiben vorbehalten und werden rechtzeitig bekannt gegeben.</p>
+      <p><strong>3. Preise und Zahlung</strong><br>
+      Es gelten die Preise zum Zeitpunkt der Buchung. Die Zahlung erfolgt unmittelbar nach der Behandlung in bar oder per EC-Karte.</p>
 
-      <p>4. Bezahlung<br>
-      Die Zahlung erfolgt unmittelbar nach der Dienstleistung in Bar, Rechnungen sind sofort fällig.</p>
+      <p><strong>4. Haftung</strong><br>
+      Der Kunde ist verpflichtet, vor der Behandlung über Allergien oder gesundheitliche Einschränkungen zu informieren. Für Folgeschäden bei unterlassener Information übernehmen wir keine Haftung.</p>
 
-      <p>5. Haftung<br>
-      Der Kosmetik Salon haftet nicht für Schäden, die durch unsachgemäße Anwendung der Produkte oder Dienstleistungen entstehen. Bei Allergien oder gesundheitlichen Problemen muss der Kunde vor der Behandlung informieren.</p>
-
-      <p>6. Datenschutz<br>
-      Wir verpflichten uns, die Daten unserer Kunden vertraulich zu behandeln und ausschließlich im Rahmen der gesetzlichen Bestimmungen zu verwenden.</p>
-
-      <p>7. Schlussbestimmungen<br>
-      Sollten einzelne Bestimmungen dieser AGB unwirksam sein, bleibt die Wirksamkeit der übrigen Bestimmungen unberührt. Änderungen der AGB bedürfen der Schriftform.</p>
-
-      <p>8. Gerichtsstand<br>
-      Gerichtsstand für alle Streitigkeiten ist der Sitz des Kosmetik Salons.</p>
+      <p><strong>5. Academy & Schulungen</strong><br>
+      Für Ausbildungen gelten gesonderte Kursgebühren, die vor Beginn der Schulung fällig sind.</p>
     </div>
   </div>
 </div>
+
+<div id="impressum-modal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn">&times;</span>
+    <h2>Impressum</h2>
+    <div class="modal-text" style="overflow-y:auto; max-height:70vh; line-height:1.6;">
+      <p><strong>Angaben gemäß § 5 TMG:</strong></p>
+      <p>Only Beauty<br>
+      Larissa Nitz<br>
+      Friedrich-Ebert-Straße 82<br>
+      04109 Leipzig</p>
+
+      <p><strong>Kontakt:</strong><br>
+      Telefon: 015170128870<br>
+      E-Mail: onlybeautyleipzig@gmail.com</p>
+
+      <p><strong>Berufsbezeichnung:</strong><br>
+      Staatlich geprüfte Kosmetikerin (verliehen in der Bundesrepublik Deutschland)</p>
+
+      <p><strong>Redaktionell verantwortlich:</strong><br>
+      Larissa Nitz<br>
+      Friedrich-Ebert-Straße 82<br>
+      04109 Leipzig</p>
+
+      <p><strong>EU-Streitschlichtung:</strong><br>
+      Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: 
+      <a href="https://ec.europa.eu/consumers/odr/" target="_blank" style="color:#d4b47a;">https://ec.europa.eu/consumers/odr/</a>.</p>
+      
+      <p><strong>Verbraucherstreitbeilegung:</strong><br>
+      Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
+    </div>
+  </div>
+</div>
+
 
 <script>
 const modalButtons = document.querySelectorAll('.footer-text-btn');
