--- a/index.html
+++ b/index.html
@@ -1546,36 +1546,36 @@ body, p, span, a, li, .cta-btn {
 
     <img src="Logo.svg" alt="Logo" class="hero-logo" data-aos="fade-in">
 
-<div class="video-teaser-container">
-  <video id="heroVideo" class="hero-video-small" autoplay muted loop playsinline preload="auto">
-    <source src="Beauty.mp4" type="video/mp4">
-  </video>
-</div>
+    <div class="video-teaser-container">
+      <video id="heroVideo" class="hero-video-small" autoplay muted loop playsinline preload="auto">
+        <source src="Beauty.mp4" type="video/mp4">
+      </video>
+    </div>
 
-
-    <h1 data-aos="fade-up" data-aos-delay="300">
+    <h1 data-aos="fade-up">
       Ganzheitliche <span class="highlight-red">Hautgesundheit</span> –<br>
       <span class="highlight-red">Behandlung</span> &amp;
       <span class="highlight-red">Ausbildung</span> unter einem Dach
     </h1>
 
-    <p data-aos="fade-up" data-aos-delay="400">
+    <p data-aos="fade-up">
       Für Frauen mit Hautproblemen<br>
       und für Quereinsteigerinnen &amp; Kosmetikerinnen,<br>
       die Haut wirklich verstehen möchten.
     </p>
 
-    <p data-aos="fade-up" data-aos-delay="450" style="font-weight:700;">
+    <p data-aos="fade-up" style="font-weight:700;">
       Ursache statt Oberfläche • Fundiertes Wissen • Nachhaltige Ergebnisse
     </p>
 
-    <div class="btn-group" data-aos="fade-up" data-aos-delay="500">
+    <div class="btn-group" data-aos="fade-up">
       <a href="#sessions" class="cta-btn no-press">Jetzt Behandlung buchen</a>
       <a href="#course-choice" class="cta-btn no-press">Zur Academy &amp; Ausbildung</a>
     </div>
 
   </div>
 </section>
+
 
 
 
@@ -1586,11 +1586,11 @@ body, p, span, a, li, .cta-btn {
       WARUM EIN <span class="highlight-red">ANDERER WEG?</span>
     </h2>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="100">
+    <p class="centered-text" data-aos="fade-up">
       Kurzfristige Effekte, wechselnde Produkte und Behandlungen ohne klares Hautverständnis führen oft dazu, dass Hautprobleme nicht nachhaltig gelöst werden.
     </p>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="150">
+    <p class="centered-text" data-aos="fade-up">
       Bei <strong>Only Beauty</strong> gehen wir tiefer. Wir betrachten Haut <span class="highlight-red">ganzheitlich</span> – ruhig, fundiert und individuell.
     </p>
 
@@ -1599,28 +1599,28 @@ body, p, span, a, li, .cta-btn {
         UNSER ANSATZ
       </h3>
 
-      <p class="centered-text" data-aos="fade-up" data-aos-delay="100">
+      <p class="centered-text" data-aos="fade-up">
         Ganzheitlich. Verständlich. Wirksam.<br>
         Hautgesundheit ist kein Zufall. Sie entsteht durch Analyse, Wissen und individuell abgestimmte Konzepte.
       </p>
 
       <div class="approach-grid">
-        <div class="approach-card" data-aos="zoom-in" data-aos-delay="200">
+        <div class="approach-card" data-aos="zoom-in">
           <div class="approach-icon">✧</div>
           <span>Ursachen erkennen statt Symptome überdecken</span>
         </div>
 
-        <div class="approach-card" data-aos="zoom-in" data-aos-delay="300">
+        <div class="approach-card" data-aos="zoom-in">
           <div class="approach-icon">✧</div>
           <span>Struktur statt Produkt-Chaos</span>
         </div>
 
-        <div class="approach-card" data-aos="zoom-in" data-aos-delay="400">
+        <div class="approach-card" data-aos="zoom-in">
           <div class="approach-icon">✧</div>
           <span>Nachhaltige Hautverbesserung</span>
         </div>
 
-        <div class="approach-card" data-aos="zoom-in" data-aos-delay="500">
+        <div class="approach-card" data-aos="zoom-in">
           <div class="approach-icon">✧</div>
           <span>Wissen, das Sicherheit gibt</span>
         </div>
@@ -1629,46 +1629,42 @@ body, p, span, a, li, .cta-btn {
   </div>
 </section>
 
-
-
 <!-- Sessions -->
 <section id="sessions">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">
+    <h2 class="section-title" data-aos="fade-up">
       <span class="highlight-red">BEHANDLUNGEN</span>
     </h2>
 
     <div class="services-grid">
       <div class="service-card service-featured choice-good" 
            style="text-align:center;" 
-           data-aos="fade-up" 
-           data-aos-delay="150">
+           data-aos="fade-up">
         
         <p style="margin-bottom:1.5rem; font-weight:500;"
-           data-aos="fade-up" 
-           data-aos-delay="250">
+           data-aos="fade-up">
           Individuelle Behandlungen für gesunde, stabile Haut<br>
           Unsere Behandlungen basieren auf einer fundierten Hautanalyse<br>
           und werden exakt auf dein Hautbild abgestimmt.
         </p>
 
-        <h3 style="margin-bottom:1rem;" data-aos="fade-up" data-aos-delay="350">
+        <h3 style="margin-bottom:1rem;" data-aos="fade-up">
           Geeignet bei:
         </h3>
 
         <ul class="choice-good-list" style="list-style:none; padding-left:0; margin-bottom:1.5rem;">
-          <li data-aos="fade-up" data-aos-delay="400">• Unreiner oder Entzündlicher Haut</li>
-          <li data-aos="fade-up" data-aos-delay="450">• Sensibler & Gestresster Haut</li>
-          <li data-aos="fade-up" data-aos-delay="500">• Hautbarriere-Störungen</li>
-          <li data-aos="fade-up" data-aos-delay="550">• Wunsch nach langfristiger Hautverbesserung</li>
+          <li data-aos="fade-up">• Unreiner oder Entzündlicher Haut</li>
+          <li data-aos="fade-up">• Sensibler & Gestresster Haut</li>
+          <li data-aos="fade-up">• Hautbarriere-Störungen</li>
+          <li data-aos="fade-up">• Wunsch nach langfristiger Hautverbesserung</li>
         </ul>
 
         <p style="margin-bottom:1.5rem; font-weight:500;"
-           data-aos="fade-up" data-aos-delay="600">
+           data-aos="fade-up">
           Ziel ist kein kurzfristiger Effekt, sondern nachhaltige Hautgesundheit.
         </p>
 
-        <div data-aos="fade-up" data-aos-delay="500">
+        <div data-aos="fade-up">
           <a href="https://calendly.com/" target="_blank" class="cta-btn">
             Jetzt Hautanalyse & Termin buchen
           </a>
@@ -1683,23 +1679,23 @@ body, p, span, a, li, .cta-btn {
 <section id="course-choice">
   <div class="container">
 
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">
+    <h2 class="section-title" data-aos="fade-up">
       FÜR ZUKÜNFTIGE <span class="highlight-red">HAUTEXPERTINNEN – ACADEMY</span>
     </h2>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="100">
+    <p class="centered-text" data-aos="fade-up">
       Dein Einstieg in die Hautexpertise – auch ohne Vorkenntnisse
     </p>
 
     <div class="academy-details">
-      <p class="centered-text" data-aos="fade-up" data-aos-delay="150">
+      <p class="centered-text" data-aos="fade-up">
         Die Only Beauty Elite Academy richtet sich an:<br>
         • Quereinsteigerinnen<br>
         • Frauen in beruflicher Neuorientierung<br>
         • Angehende oder aktive Kosmetikerinnen
       </p>
 
-      <p class="centered-text" data-aos="fade-up" data-aos-delay="200">
+      <p class="centered-text" data-aos="fade-up">
         Kein Vorwissen erforderlich. Du lernst Schritt für Schritt:<br>
         • Hautzustände zu verstehen<br>
         • Sicher zu analysieren<br>
@@ -1708,22 +1704,22 @@ body, p, span, a, li, .cta-btn {
       </p>
     </div>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="250" style="font-weight: 700;">
+    <p class="centered-text" data-aos="fade-up" style="font-weight: 700;">
       Strukturiert, praxisnah und verständlich aufgebaut.
     </p>
 
-    <div class="decision-banner" data-aos="zoom-in" data-aos-delay="300">
+    <div class="decision-banner" data-aos="zoom-in">
       <span>ENTSCHEIDUNG</span>
       <h2>DEIN WEG</h2>
     </div>
 
     <div class="choices">
-      <div class="choice-card choice-bad" data-aos="fade-right" data-aos-delay="400">
-        <h3 data-aos="fade-up" data-aos-delay="500">Option A: Bleib beim Status quo</h3>
-        <p data-aos="fade-up" data-aos-delay="550">
+      <div class="choice-card choice-bad" data-aos="fade-right">
+        <h3 data-aos="fade-up">Option A: Bleib beim Status quo</h3>
+        <p data-aos="fade-up">
           Du bleibst in deinem 9-to-5 Job, kommst finanziell kaum voran und lebst deinen Traum nie wirklich.
         </p>
-        <p class="choice-bad-list" data-aos="fade-up" data-aos-delay="600">
+        <p class="choice-bad-list" data-aos="fade-up">
           • Feste Arbeitszeiten<br>
           • Begrenztes Einkommen<br>
           • Keine persönliche Entwicklung<br>
@@ -1731,18 +1727,18 @@ body, p, span, a, li, .cta-btn {
         </p>
       </div>
 
-      <div class="choice-card choice-good choice-featured" data-aos="fade-left" data-aos-delay="500">
-        <h3 data-aos="fade-up" data-aos-delay="600">Option B: Starte jetzt deinen Weg</h3>
-        <p data-aos="fade-up" data-aos-delay="650">
+      <div class="choice-card choice-good choice-featured" data-aos="fade-left">
+        <h3 data-aos="fade-up">Option B: Starte jetzt deinen Weg</h3>
+        <p data-aos="fade-up">
           Werde Skin-Expertin, baue dein eigenes Business auf und lebe deine Leidenschaft selbstbestimmt.
         </p>
-        <p class="choice-good-list" data-aos="fade-up" data-aos-delay="700">
+        <p class="choice-good-list" data-aos="fade-up">
           ✓ Werde zum Hautexperten<br>
           ✓ Werde deine eigene Chefin<br>
           ✓ Deutlich höheres Einkommen<br>
           ✓ Freiheit & Erfüllung
         </p>
-        <div data-aos="zoom-in" data-aos-delay="600">
+        <div data-aos="zoom-in">
           <a href="https://calendly.com/" target="_blank" class="cta-btn">
             Ja, ich will erfolgreicher Skin Expert werden
           </a>
@@ -1756,35 +1752,36 @@ body, p, span, a, li, .cta-btn {
 <!-- Warum Only Beauty Section (Single Animated Card) -->
 <section id="why-only-beauty" style="background: var(--white); padding: clamp(3rem, 6vw, 5rem) 0;">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">WARUM ONLY <span class="highlight-red">BEAUTY?</span></h2>
+    <h2 class="section-title" data-aos="fade-up">WARUM ONLY <span class="highlight-red">BEAUTY?</span></h2>
     
     <div style="max-width: 650px; margin: 0 auto; text-align: center;">
-      <p style="font-size: 1.3rem; font-weight: 700; margin-bottom: 2rem; color: var(--black-soft);" data-aos="fade-up" data-aos-delay="150">
+      <p style="font-size: 1.3rem; font-weight: 700; margin-bottom: 2rem; color: var(--black-soft);" data-aos="fade-up">
         Was uns besonders macht
       </p>
 
       <div class="why-text">
-        <p data-aos="fade-up" data-aos-delay="200">✔ Ganzheitlicher Ansatz</p>
-        <p data-aos="fade-up" data-aos-delay="250">✔ Verständlich & praxisnah erklärt</p>
-        <p data-aos="fade-up" data-aos-delay="300">✔ Individuelle Betreuung</p>
-        <p data-aos="fade-up" data-aos-delay="350">✔ Reale Hautfälle & echte Erfahrung</p>
-        <p data-aos="fade-up" data-aos-delay="400">✔ Wissen, das anwendbar ist</p>
+        <p data-aos="fade-up">✔ Ganzheitlicher Ansatz</p>
+        <p data-aos="fade-up">✔ Verständlich & praxisnah erklärt</p>
+        <p data-aos="fade-up">✔ Individuelle Betreuung</p>
+        <p data-aos="fade-up">✔ Reale Hautfälle & echte Erfahrung</p>
+        <p data-aos="fade-up">✔ Wissen, das anwendbar ist</p>
       </div>
 
-      <p style="margin-top: 2rem; font-weight: 600; color: var(--black-soft);" data-aos="fade-up" data-aos-delay="500">
+      <p style="margin-top: 2rem; font-weight: 600; color: var(--black-soft);" data-aos="fade-up">
         Für Kundinnen und angehende Hautexpertinnen.
       </p>
     </div>
   </div>
 </section>
 
+<!-- Testimonials -->
 <section id="testimonials">
   <div class="container">
-    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="50">
+    <p class="section-subtitle" data-aos="fade-up">
       Vertrauen aus Erfahrung
     </p>
 
-    <div class="testimonial-slider" data-aos="fade-up" data-aos-delay="200">
+    <div class="testimonial-slider" data-aos="fade-up">
       <div class="testimonial">
         <p>„Ich hatte vorher keine Vorkenntnisse und fühle mich jetzt sicher im Umgang mit Hautbildern.“</p>
         <div class="testimonial-stars">
@@ -1812,50 +1809,51 @@ body, p, span, a, li, .cta-btn {
   </div>
 </section>
 
+
 <!-- FAQ Section -->
 <section id="faq">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">FAQ</h2>
+    <h2 class="section-title" data-aos="fade-up">FAQ</h2>
 
-    <h3 class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Allgemein</h3>
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="150">
+    <h3 class="section-subtitle" data-aos="fade-up">Allgemein</h3>
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Für wen ist Only Beauty geeignet?</button>
       <div class="faq-answer">
         <p>Für Kundinnen mit Hautproblemen sowie für Frauen, die sich im Bereich Hautgesundheit neu orientieren oder weiterbilden möchten – mit oder ohne Vorkenntnisse.</p>
       </div>
     </div>
 
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Was bedeutet ganzheitliche Hautgesundheit?</button>
       <div class="faq-answer">
         <p>Wir betrachten Haut nicht isoliert, sondern im Zusammenspiel aus Hautbarriere, Pflege, äußeren Einflüssen und individuellen Faktoren – für nachhaltige Ergebnisse.</p>
       </div>
     </div>
 
-    <h3 class="section-subtitle" data-aos="fade-up" data-aos-delay="250">Behandlungen</h3>
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
+    <h3 class="section-subtitle" data-aos="fade-up">Behandlungen</h3>
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Für welche Hautprobleme sind die Behandlungen geeignet?</button>
       <div class="faq-answer">
         <p>Unter anderem bei unreiner, sensibler, entzündlicher Haut, Hautbarriere-Störungen oder dem Wunsch nach langfristiger Verbesserung.</p>
       </div>
     </div>
 
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="350">
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Wie viele Behandlungen sind notwendig?</button>
       <div class="faq-answer">
         <p>Das hängt vom individuellen Hautzustand ab. Ziel ist eine nachhaltige Stabilisierung, kein kurzfristiger Effekt.</p>
       </div>
     </div>
 
-    <h3 class="section-subtitle" data-aos="fade-up" data-aos-delay="400">Academy & Ausbildung</h3>
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="450">
+    <h3 class="section-subtitle" data-aos="fade-up">Academy & Ausbildung</h3>
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Kann ich auch ohne Vorkenntnisse teilnehmen?</button>
       <div class="faq-answer">
         <p>Ja. Die Ausbildung ist ausdrücklich auch für Quereinsteigerinnen geeignet und beginnt bei den Grundlagen.</p>
       </div>
     </div>
 
-    <div class="faq-item" data-aos="fade-up" data-aos-delay="500">
+    <div class="faq-item" data-aos="fade-up">
       <button class="faq-question">Werde ich betreut?</button>
       <div class="faq-answer">
         <p>Ja. Persönliche Betreuung und Begleitung sind fester Bestandteil der Academy.</p>
@@ -1878,17 +1876,17 @@ document.querySelectorAll('.faq-question').forEach(button => {
 <!-- Call to Action Section -->
 <section id="cta-final">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">
+    <h2 class="section-title" data-aos="fade-up">
       <span class="highlight-red">Starte jetzt deinen Weg</span>
     </h2>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="150">
+    <p class="centered-text" data-aos="fade-up">
       Ob du deine Haut nachhaltig verbessern möchtest<br>
       oder dir eine neue berufliche Perspektive aufbauen willst –<br>
       bei Only Beauty bist du richtig.
     </p>
 
-    <div class="btn-group" data-aos="fade-up" data-aos-delay="250">
+    <div class="btn-group" data-aos="fade-up">
       <a href="#sessions" class="cta-btn no-press">Behandlung buchen</a>
       <a href="#course-choice" class="cta-btn no-press">Zur Academy & Ausbildung</a>
     </div>
@@ -1898,32 +1896,32 @@ document.querySelectorAll('.faq-question').forEach(button => {
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up" data-aos-delay="50">
+    <h2 class="section-title" data-aos="fade-up">
       Kontaktiere uns
     </h2>
 
-    <p class="centered-text" data-aos="fade-up" data-aos-delay="150">
+    <p class="centered-text" data-aos="fade-up">
       Wir freuen uns auf deine Nachricht oder deinen Besuch!
     </p>
 
-    <div class="contact-info" data-aos="fade-up" data-aos-delay="250">
-      <p data-aos="fade-up" data-aos-delay="300">
+    <div class="contact-info" data-aos="fade-up">
+      <p data-aos="fade-up">
         <strong>Adresse:</strong> Friedrich-Ebert-Straße 82, 04109 Leipzig
       </p>
-      <p data-aos="fade-up" data-aos-delay="350">
+      <p data-aos="fade-up">
         <strong>Telefon:</strong> 015170128870
       </p>
-      <p data-aos="fade-up" data-aos-delay="400">
+      <p data-aos="fade-up">
         <strong>E-Mail:</strong> onlybeautyleipzig@gmail.com
       </p>
-      <p data-aos="fade-up" data-aos-delay="450">
+      <p data-aos="fade-up">
         <strong>Öffnungszeiten:</strong> Mo–Fr 10:00–19:00, Sa 10:00–16:00
       </p>
     </div>
   </div>
 </section>
 
-
+<!-- Footer Section -->
 <footer style="background:#1a1a1a; padding:2rem; text-align:center; color: rgba(255,255,255,0.7);">
   <p>© 2026 <span style="color:#d4b47a;">Only Beauty – Derma Institut & Elite Academy<br>
     Ganzheitliche Hautgesundheit • Ursache statt Oberfläche</span></p>
@@ -2055,10 +2053,10 @@ window.addEventListener('click', (e) => {
     history.replaceState(null, '', window.location.pathname);
 
 AOS.init({
-  duration: 300,      // Longer duration for a premium feel
+  duration: 350,      // Longer duration for a premium feel
   easing: 'ease-out',  // Clean fade without the "bounce/wobble"
-  once: true,          // Animation happens only once
-  offset: 0,         // Starts 100px before the element enters view
+  once: false,          // Animation happens only once
+  offset: 50,         // Starts 100px before the element enters view
   delay: 0,
 });
   });
