Change AOS animation to occur only once

--- a/index.html
+++ b/index.html
@@ -2084,7 +2084,7 @@ window.addEventListener('click', (e) => {
 AOS.init({
   duration: 350,      // Longer duration for a premium feel
   easing: 'ease-out',  // Clean fade without the "bounce/wobble"
-  once: false,          // Animation happens only once
+  once: true,          // Animation happens only once
   offset: 50,         // Starts 100px before the element enters view
   delay: 0,
 });
