--- a/index.html
+++ b/index.html
@@ -1718,7 +1718,7 @@ body, p, span, a, li, .cta-btn {
         </p>
 
         <div data-aos="fade-up">
-          <a href="https://calendly.com/" target="_blank" class="cta-btn">
+          <a href="https://www.beautinda.de/artist/nW2t9Zwjjgb3z41byzNVO6qVy572" target="_blank" class="cta-btn">
             Jetzt Hautanalyse & Termin buchen
           </a>
         </div>
@@ -1792,7 +1792,7 @@ body, p, span, a, li, .cta-btn {
           ✓ Freiheit & Erfüllung
         </p>
         <div data-aos="zoom-in">
-          <a href="https://calendly.com/" target="_blank" class="cta-btn">
+          <a href="https://calendly.com/onlybeautyleipzig/30min" target="_blank" class="cta-btn">
             Ja, ich will erfolgreicher Skin Expert werden
           </a>
         </div>
@@ -1959,20 +1959,25 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
     <div class="contact-info" data-aos="fade-up">
       <p data-aos="fade-up">
-        <strong>Adresse:</strong> Friedrich-Ebert-Straße 82, 04109 Leipzig
+        <strong>Adresse:</strong> Friedrich-Ebert-Straße 89, 04109 Leipzig
       </p>
       <p data-aos="fade-up">
         <strong>Telefon:</strong> 015170128870
       </p>
       <p data-aos="fade-up">
-        <strong>E-Mail:</strong> onlybeautyleipzig@gmail.com
-      </p>
-      <p data-aos="fade-up">
-        <strong>Öffnungszeiten:</strong> Mo–Fr 10:00–19:00, Sa 10:00–16:00
+        <strong>Öffnungszeiten:</strong><br>
+        Montag: geschlossen<br>
+        Dienstag: 09:00 – 21:00<br>
+        Mittwoch: 09:00 – 21:00<br>
+        Donnerstag: 10:00 – 16:00<br>
+        Freitag: 10:00 – 16:00<br>
+        Samstag: 10:00 – 16:00<br>
+        Sonntag: geschlossen
       </p>
     </div>
   </div>
 </section>
+
 
 <!-- Footer Section -->
 <footer style="background:#1a1a1a; padding:2rem; text-align:center; color: rgba(255,255,255,0.7);">
@@ -1997,14 +2002,13 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
       <p><strong>2. Verantwortlicher</strong><br>
       Larissa Nitz<br>
-      Friedrich-Ebert-Straße 82<br>
+      Friedrich-Ebert-Straße 89<br>
       04109 Leipzig<br>
-      Email: onlybeautyleipzig@gmail.com<br>
       Telefon: 015170128870</p>
 
       <p><strong>3. Erhebung und Speicherung personenbezogener Daten</strong></p>
       <p>3.1. Beim Besuch der Website: Automatische Erfassung von IP-Adresse, Datum/Uhrzeit und Browsertyp zur Sicherstellung der Systemsicherheit.</p>
-      <p>3.2. Kontaktaufnahme: Bei Anfragen per E-Mail oder Telefon speichern wir Ihre Angaben zur Bearbeitung der Anfrage (Art. 6 Abs. 1 lit. b DSGVO).</p>
+      <p>3.2. Kontaktaufnahme: Bei Anfragen per Telefon speichern wir Ihre Angaben zur Bearbeitung der Anfrage (Art. 6 Abs. 1 lit. b DSGVO).</p>
 
       <p><strong>4. Ihre Rechte</strong><br>
       Sie haben das Recht auf Auskunft, Berichtigung, Löschung und Einschränkung der Verarbeitung Ihrer personenbezogenen Daten sowie das Recht auf Datenübertragbarkeit und Widerruf erteilter Einwilligungen.</p>
@@ -2014,6 +2018,7 @@ document.querySelectorAll('.faq-question').forEach(button => {
     </div>
   </div>
 </div>
+
 
 <div id="agb-modal" class="modal">
   <div class="modal-content">
@@ -2046,19 +2051,18 @@ document.querySelectorAll('.faq-question').forEach(button => {
       <p><strong>Angaben gemäß § 5 TMG:</strong></p>
       <p>Only Beauty<br>
       Larissa Nitz<br>
-      Friedrich-Ebert-Straße 82<br>
+      Friedrich-Ebert-Straße 89<br>
       04109 Leipzig</p>
 
       <p><strong>Kontakt:</strong><br>
-      Telefon: 015170128870<br>
-      E-Mail: onlybeautyleipzig@gmail.com</p>
+      Telefon: 015170128870</p>
 
       <p><strong>Berufsbezeichnung:</strong><br>
       Staatlich geprüfte Kosmetikerin (verliehen in der Bundesrepublik Deutschland)</p>
 
       <p><strong>Redaktionell verantwortlich:</strong><br>
       Larissa Nitz<br>
-      Friedrich-Ebert-Straße 82<br>
+      Friedrich-Ebert-Straße 89<br>
       04109 Leipzig</p>
 
       <p><strong>EU-Streitschlichtung:</strong><br>
