--- a/index.html
+++ b/index.html
@@ -2022,10 +2022,13 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
     <div class="contact-info" data-aos="fade-up">
       <p data-aos="fade-up">
-        <strong>Adresse:</strong> Friedrich-Ebert-Straße 89, 04109 Leipzig
+        <strong>Adresse:</strong> <a href="https://www.google.com/maps/search/?api=1&query=Friedrich-Ebert-Straße+89,+04109+Leipzig" target="_blank" style="color: inherit; text-decoration: none;">Friedrich-Ebert-Straße 89, 04109 Leipzig</a>
       </p>
       <p data-aos="fade-up">
-        <strong>Telefon:</strong> 015170128870
+        <strong>E-Mail:</strong> <a href="mailto:onlybeautyleipzig@gmail.com" style="color: inherit; text-decoration: none;">onlybeautyleipzig@gmail.com</a>
+      </p>
+      <p data-aos="fade-up">
+        <strong>Telefon:</strong> <a href="tel:+4915170128870" style="color: inherit; text-decoration: none;">015170128870</a>
       </p>
       <p data-aos="fade-up">
         <strong>Öffnungszeiten:</strong><br>
@@ -2038,7 +2041,6 @@ document.querySelectorAll('.faq-question').forEach(button => {
         Sonntag: geschlossen
       </p>
     </div>
-  </div>
 </section>
 
 
@@ -2065,13 +2067,14 @@ document.querySelectorAll('.faq-question').forEach(button => {
 
       <p><strong>2. Verantwortlicher</strong><br>
       Larissa Nitz<br>
-      Friedrich-Ebert-Straße 89<br>
-      04109 Leipzig<br>
-      Telefon: 015170128870</p>
+      <a href="https://maps.google.com/?q=Friedrich-Ebert-Straße+89,+04109+Leipzig" target="_blank" style="color: inherit; text-decoration: none;">Friedrich-Ebert-Straße 89<br>
+      04109 Leipzig</a><br>
+      E-Mail: <a href="mailto:onlybeautyleipzig@gmail.com" style="color: inherit; text-decoration: none;">onlybeautyleipzig@gmail.com</a><br>
+      Telefon: <a href="tel:+4915170128870" style="color: inherit; text-decoration: none;">015170128870</a></p>
 
       <p><strong>3. Erhebung und Speicherung personenbezogener Daten</strong></p>
       <p>3.1. Beim Besuch der Website: Automatische Erfassung von IP-Adresse, Datum/Uhrzeit und Browsertyp zur Sicherstellung der Systemsicherheit.</p>
-      <p>3.2. Kontaktaufnahme: Bei Anfragen per Telefon speichern wir Ihre Angaben zur Bearbeitung der Anfrage (Art. 6 Abs. 1 lit. b DSGVO).</p>
+      <p>3.2. Kontaktaufnahme: Bei Anfragen per Telefon oder E-Mail speichern wir Ihre Angaben zur Bearbeitung der Anfrage (Art. 6 Abs. 1 lit. b DSGVO).</p>
 
       <p><strong>4. Ihre Rechte</strong><br>
       Sie haben das Recht auf Auskunft, Berichtigung, Löschung und Einschränkung der Verarbeitung Ihrer personenbezogenen Daten sowie das Recht auf Datenübertragbarkeit und Widerruf erteilter Einwilligungen.</p>
@@ -2114,11 +2117,12 @@ document.querySelectorAll('.faq-question').forEach(button => {
       <p><strong>Angaben gemäß § 5 TMG:</strong></p>
       <p>Only Beauty<br>
       Larissa Nitz<br>
-      Friedrich-Ebert-Straße 89<br>
-      04109 Leipzig</p>
+      <a href="https://maps.google.com/?q=Friedrich-Ebert-Straße+89,+04109+Leipzig" target="_blank" style="color: inherit; text-decoration: none;">Friedrich-Ebert-Straße 89<br>
+      04109 Leipzig</a></p>
 
       <p><strong>Kontakt:</strong><br>
-      Telefon: 015170128870</p>
+      E-Mail: <a href="mailto:onlybeautyleipzig@gmail.com" style="color: inherit; text-decoration: none;">onlybeautyleipzig@gmail.com</a><br>
+      Telefon: <a href="tel:+4915170128870" style="color: inherit; text-decoration: none;">015170128870</a></p>
 
       <p><strong>Berufsbezeichnung:</strong><br>
       Staatlich geprüfte Kosmetikerin (verliehen in der Bundesrepublik Deutschland)</p>
