--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Montserrat:wght@300;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Cormorant+Garamond:ital,wght@0,300;0,600;1,300&family=Montserrat:wght@300;500;700&display=swap"
         rel="stylesheet">
 
     <link
@@ -32,7 +32,10 @@
     <section class="hero" data-aos="fade">
         <div class="container hero-content">
 
-            <img src="Logo.svg" alt="Logo" class="hero-logo" data-aos="fade-in">
+            <div class="text-logo-wrapper" data-aos="fade-in">
+                <span class="logo-primary">ONLY BEAUTY</span>
+                <span class="logo-secondary">PREMIUM INSTITUT & DERMA ACADEMY</span>
+            </div>
 
             <div class="video-teaser-container">
                 <video id="heroVideo" class="hero-video-small" autoplay muted loop playsinline preload="auto">
