--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 Ganzheitliche Hautgesundheit • Ursache statt Oberfläche</span></p>
 
         <div class="footer-social">
-            <a href="https://www.instagram.com/onlybeautyleipzig/" target="_blank" class="social-link"
+            <a href="https://www.instagram.com/larissa_nitz/" target="_blank" class="social-link"
                 aria-label="Instagram">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
